--- a/hello-quote-service.properties
+++ b/hello-quote-service.properties
@@ -2,7 +2,7 @@ server.port=2244
 
 management.endpoints.web.exposure.include=*
 
-magicEightBallServiceName= magic-eight-ball-service
-serviceProtocol= http://
-servicePath= /eightballanswer
+magicEightBallServiceName=magic-eight-ball-service
+serviceProtocol=http://
+servicePath=/eightballanswer
 
